kubernetes/applications/media/manifests/seerr/seerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:sha-15356df
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: run
              mountPath: /run
          ports:
            - containerPort: 5055
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 15
            failureThreshold: 3
          securityContext:
            readOnlyRootFilesystem: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: config
          emptyDir: {}
        - name: run
          emptyDir: {}
